# ChangeLog for dev-java/libgnome-java
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/libgnome-java/ChangeLog,v 1.7 2005/03/31 18:29:15 axxo Exp $

  31 Mar 2005; Thomas Matthijs <axxo@gentoo.org>
  libgnome-java-2.8.3.1.ebuild:
  add include path's to jni.h

  12 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org>
  libgnome-java-2.8.2-r1.ebuild:
  updated libgtk-java dependency to fix #84342

*libgnome-java-2.8.3.1 (12 Mar 2005)

  12 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org>
  +files/libgnome-java-2.8.3.1_gentoo-PN-SLOT.patch,
  libgnome-java-2.8.2-r1.ebuild, +libgnome-java-2.8.3.1.ebuild:
  new upstream version, partially closes #83366. added ~amd64 to KEYWORDS.
  ebuilds and patched contributed by Andrew Cowie
  <andrew@operationaldynamics.com>.

* libgnome-java-2.8.2-r1 (17 Nov 2004)

  17 Nov 2004; Andrew Cowie <andrew@operationaldynamics.com> +libgnome-java-2.8.2-r1:
  Added libgnomeui to DEPENDS

* libgnome-java-2.8.2 (08 Nov 2004)

  08 Nov 2004; Andrew Cowie <andrew@operationaldynamics.com>:
  New ebuild. What used to be java-gnome is now multiplexed into various modular
  subcomponents. Upstream CVS was all re-arranged, and now there is a release
  tarball for each piece. This ebuild is the Java binding around the core GNOME
  libraries.
 
*libgnome-java-2.8.2 (22 Nov 2004)

  22 Nov 2004; Karl Trygve Kalleberg <karltk@gentoo.org> +metadata.xml,
  +files/libgnome-java-2.8.2_gentoo-PN-SLOT.patch,
  +libgnome-java-2.8.2.ebuild:
  Initial import. Fixes #70560.

  08 Nov 2004; Andrew Cowie <andrew@operationaldynamics.com>:
  New ebuild. What used to be java-gnome is now multiplexed into various modular
  subcomponents. Upstream CVS was all re-arranged, and now there is a release
  tarball for each piece. This ebuild is the Java binding around the core GNOME
  libraries.